[package]
name = "vulnera-advisors"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
zip = "6.0.0"
tracing = "0.1"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dotenvy = "0.15"
zstd = "0.13"
anyhow = "1.0.100"
async-trait = "0.1.89"
