[package]
name = "vulnera-advisors"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
zip = "6.0.0"
tracing = "0.1"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dotenvy = "0.15"
zstd = "0.13"
tempfile = "3.8"
futures-util = "0.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
governor = "0.10.2"
nonzero_ext = "0.3"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
cpe = "0.1"
packageurl = "0.3"
semver = "1.0"
