[package]
name = "vulnera-advisor"
version = "0.1.7"
edition = "2024"
description = "Aggregates security advisories from GHSA, NVD, OSV, CISA KEV, and more"
license = "GPL-3.0-or-later"
repository = "https://github.com/Vulnera-rs/advisors"
documentation = "https://docs.rs/vulnera-advisors"
readme = "README.md"
keywords = ["security", "vulnerability", "advisory", "cve", "ghsa"]
categories = ["development-tools", "database"]
rust-version = "1.91"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
zip = "6.0.0"
tracing = "0.1"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dotenvy = "0.15"
zstd = "0.13"
tempfile = "3.24.0"
futures-util = "0.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
governor = "0.10.4"
nonzero_ext = "0.3"
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
cpe = "0.1"
packageurl = "0.6.0"
semver = "1.0"
async-stream = "0.3"
regex-lite = "0.1"
once_cell = "1.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
wiremock = "0.6"
